# process-viewer

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml
.github/workflows/: CI.yml
assets/: fr.guillaume_gomez.ProcessViewer.desktop  fr.guillaume_gomez.ProcessViewer.metainfo.xml  process-viewer.appdata.xml  process-viewer.desktop
flatpak/: fr.guillaume_gomez.ProcessViewer.json  generated-sources.json
src/: color.rs  disk_info.rs  display_disk.rs  display_network.rs  display_procs.rs  display_sysinfo.rs  graph.rs  macros.rs  main.rs  network_dialog.rs  notebook.rs  process_dialog.rs  process_viewer.rs  processus_viewer.rs  procs.rs  settings.rs  utils.rs
