[package]
name = "process_viewer"
version = "0.5.8"
authors = ["Guillaume Gomez <guillaume1.gomez@gmail.com>"]
edition = "2021"
description = "A process viewer GUI"
repository = "https://github.com/GuillaumeGomez/process-viewer"
license = "MIT"
homepage = "https://github.com/GuillaumeGomez/process-viewer"

readme = "README.md"

keywords = ["GUI", "process", "viewer", "gtk"]

[dependencies]
gtk = { version = "0.6", package = "gtk4" }
sysinfo = "0.28.2"
libc = "0.2"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
