[package]
name = "process_viewer"
version = "0.5.10"
authors = ["Guillaume Gomez <guillaume1.gomez@gmail.com>"]
edition = "2021"
description = "A process viewer GUI"
repository = "https://github.com/GuillaumeGomez/process-viewer"
license = "MIT"
homepage = "https://github.com/GuillaumeGomez/process-viewer"
rust-version = "1.86"

readme = "README.md"

keywords = ["GUI", "process", "viewer", "gtk"]

[dependencies]
gtk = { version = "0.10", package = "gtk4" }
sysinfo = "0.36"
libc = "0.2"
serde = "1.0"
serde_derive = "1.0"
toml = "0.8"
async-channel = "2.2.1"
